# chat-framework

./: .gitignore  PRD.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.build.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
docs/api/: browser.md  core.md  python-ml.md
examples/astrochat/: README.md  astro-bot.ts  index.ts
keyboard_dynamics_gan/: __init__.py  config.py  export.py  inference.py
keyboard_dynamics_gan/data/: __init__.py  dataset.py
keyboard_dynamics_gan/evaluation/: __init__.py  visualization.py
keyboard_dynamics_gan/models/: __init__.py  discriminator.py  generator.py  rhythm.py
keyboard_dynamics_gan/training/: __init__.py  losses.py  trainer.py
mouse_trajectory_gan/: __init__.py  config.py  export.py  inference.py
mouse_trajectory_gan/data/: __init__.py  dataset.py
mouse_trajectory_gan/evaluation/: __init__.py  fitts.py  visualization.py
mouse_trajectory_gan/models/: __init__.py  discriminator.py  generator.py  kinematics.py
mouse_trajectory_gan/training/: __init__.py  losses.py  trainer.py
scripts/: generate.py  generate_keyboard.py  train.py  train_cmu_benchmark.py  train_keyboard.py
tests/: test_cmu_training.py  test_config.py  test_dataset.py  test_inference.py  test_keyboard_config.py  test_keyboard_inference.py  test_keyboard_models.py  test_models.py
