[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keyboard-dynamics-gan"
version = "0.1.0"
description = "WGAN-GP LSTM for generating realistic keystroke timing dynamics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "tensorboard>=2.13.0",
]

[project.optional-dependencies]
export = ["onnx>=1.14.0", "onnxruntime>=1.15.0"]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[project.scripts]
keyboard-gan-train = "scripts.train_keyboard:main"
keyboard-gan-generate = "scripts.generate_keyboard:main"

[tool.setuptools.packages.find]
include = ["keyboard_dynamics_gan*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
